[package]
name = "aos2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "1a"
path = "src/1/a.rs"

[[bin]]
name = "1b"
path = "src/1/b.rs"

[[bin]]
name = "2a"
path = "src/2/a.rs"

[[bin]]
name = "2b"
path = "src/2/b.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
