[package]
name = "aos2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "1a"
path = "src/1/a.rs"

[[bin]]
name = "1b"
path = "src/1/b.rs"

[[bin]]
name = "2a"
path = "src/2/a.rs"

[[bin]]
name = "2b"
path = "src/2/b.rs"

[[bin]]
name = "3a"
path = "src/3/a.rs"

[[bin]]
name = "3b"
path = "src/3/b.rs"

[[bin]]
name = "4a"
path = "src/4/a.rs"

[[bin]]
name = "4b"
path = "src/4/b.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.3.0"
itertools = "0.12.0"
