[package]
name = "aos2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "1a"
path = "src/1/a.rs"

[[bin]]
name = "1b"
path = "src/1/b.rs"

[[bin]]
name = "2a"
path = "src/2/a.rs"

[[bin]]
name = "2b"
path = "src/2/b.rs"

[[bin]]
name = "3a"
path = "src/3/a.rs"

[[bin]]
name = "3b"
path = "src/3/b.rs"

[[bin]]
name = "4a"
path = "src/4/a.rs"

[[bin]]
name = "4b"
path = "src/4/b.rs"

[[bin]]
name = "5a"
path = "src/5/a.rs"

[[bin]]
name = "5b"
path = "src/5/b.rs"

[[bin]]
name = "6a"
path = "src/6/a.rs"

[[bin]]
name = "6b"
path = "src/6/b.rs"

[[bin]]
name = "7a"
path = "src/7/a.rs"

[[bin]]
name = "7b"
path = "src/7/b.rs"

[[bin]]
name = "8a"
path = "src/8/a.rs"

[[bin]]
name = "8b"
path = "src/8/b.rs"

[[bin]]
name = "9a"
path = "src/9/a.rs"

[[bin]]
name = "9b"
path = "src/9/b.rs"

[[bin]]
name = "10a"
path = "src/10/a.rs"

[[bin]]
name = "10b"
path = "src/10/b.rs"

[[bin]]
name = "11a"
path = "src/11/a.rs"

[[bin]]
name = "11b"
path = "src/11/b.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.3.0"
itertools = "0.12.0"
num = "0.4.1"
pathfinding = "4.4.0"
